@@ -441,15 +441,15 @@ INSERT INTO static_country_zones VALUES ('91', '0', 'DE', 'DEU', '276', 'SN', 'S
 INSERT INTO static_country_zones VALUES ('92', '0', 'DE', 'DEU', '276', 'ST', 'Sachsen-Anhalt', 'Saxony-Anhalt');
 INSERT INTO static_country_zones VALUES ('93', '0', 'DE', 'DEU', '276', 'SH', 'Schleswig-Holstein', '');
 INSERT INTO static_country_zones VALUES ('94', '0', 'DE', 'DEU', '276', 'TH', 'Thüringen', 'Thuringia');
-INSERT INTO static_country_zones VALUES ('95', '0', 'AT', 'AUT', '40', 'WI', 'Wien', 'Vienna');
-INSERT INTO static_country_zones VALUES ('96', '0', 'AT', 'AUT', '40', 'NO', 'Niederösterreich', 'Lower Austria');
-INSERT INTO static_country_zones VALUES ('97', '0', 'AT', 'AUT', '40', 'OO', 'Oberösterreich', 'Upper Austria');
-INSERT INTO static_country_zones VALUES ('98', '0', 'AT', 'AUT', '40', 'SB', 'Salzburg', '');
-INSERT INTO static_country_zones VALUES ('99', '0', 'AT', 'AUT', '40', 'KN', 'Kärnten', 'Carinthia');
-INSERT INTO static_country_zones VALUES ('100', '0', 'AT', 'AUT', '40', 'ST', 'Steiermark', 'Styria');
-INSERT INTO static_country_zones VALUES ('101', '0', 'AT', 'AUT', '40', 'TI', 'Tirol', 'Tyrol');
-INSERT INTO static_country_zones VALUES ('102', '0', 'AT', 'AUT', '40', 'BL', 'Burgenland', '');
-INSERT INTO static_country_zones VALUES ('103', '0', 'AT', 'AUT', '40', 'VB', 'Vorarlberg', '');
+INSERT INTO static_country_zones VALUES ('95', '0', 'AT', 'AUT', '40', 'AT-9', 'Wien', 'Vienna');
+INSERT INTO static_country_zones VALUES ('96', '0', 'AT', 'AUT', '40', 'AT-3', 'Niederösterreich', 'Lower Austria');
+INSERT INTO static_country_zones VALUES ('97', '0', 'AT', 'AUT', '40', 'AT-4', 'Oberösterreich', 'Upper Austria');
+INSERT INTO static_country_zones VALUES ('98', '0', 'AT', 'AUT', '40', 'AT-5', 'Salzburg', '');
+INSERT INTO static_country_zones VALUES ('99', '0', 'AT', 'AUT', '40', 'AT-2', 'Kärnten', 'Carinthia');
+INSERT INTO static_country_zones VALUES ('100', '0', 'AT', 'AUT', '40', 'AT-6', 'Steiermark', 'Styria');
+INSERT INTO static_country_zones VALUES ('101', '0', 'AT', 'AUT', '40', 'AT-7', 'Tirol', 'Tyrol');
+INSERT INTO static_country_zones VALUES ('102', '0', 'AT', 'AUT', '40', 'AT-1', 'Burgenland', '');
+INSERT INTO static_country_zones VALUES ('103', '0', 'AT', 'AUT', '40', 'AT-8', 'Vorarlberg', '');
 INSERT INTO static_country_zones VALUES ('104', '0', 'CH', 'CHE', '756', 'AG', 'Aargau', '');
 INSERT INTO static_country_zones VALUES ('105', '0', 'CH', 'CHE', '756', 'AI', 'Appenzell Innerrhoden', '');
 INSERT INTO static_country_zones VALUES ('106', '0', 'CH', 'CHE', '756', 'AR', 'Appenzell Ausserrhoden', '');
