@@ -1,6 +1,7 @@
 2011-01-25  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #9423: Add country zones for the regions and departments of France
+	* Fixed issue #12530: Erroneous country zone codes for Austria
 
 2011-01-24  Stanislas Rolland  <typo3@sjbr.ca>
 
